[gd_scene load_steps=23 format=2]

[ext_resource path="res://Scripts/World.gd" type="Script" id=1]
[ext_resource path="res://Assets/Squared Display.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Scripts/Camera.gd" type="Script" id=3]
[ext_resource path="res://Scripts/HighScore.gd" type="Script" id=4]
[ext_resource path="res://Scripts/Kills_Counter.gd" type="Script" id=5]
[ext_resource path="res://Scripts/Score.gd" type="Script" id=6]
[ext_resource path="res://Scenes/hell_mode_player.tscn" type="PackedScene" id=7]
[ext_resource path="res://Music/RoughSketch - 666.mp3" type="AudioStream" id=8]
[ext_resource path="res://Scenes/Speed_power_up_hell_mode.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scenes/Graphics.tscn" type="PackedScene" id=10]
[ext_resource path="res://Scenes/Boss_1.tscn" type="PackedScene" id=11]
[ext_resource path="res://Scenes/Boss_2.tscn" type="PackedScene" id=12]
[ext_resource path="res://Shaders/Aberration.shader" type="Shader" id=13]
[ext_resource path="res://Shaders/Background.shader" type="Shader" id=14]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 13 )
shader_param/_amount = 0.25
shader_param/_centerFade = 0.211
shader_param/_aberrationCenter = Vector2( 0.5, 0.5 )

[sub_resource type="DynamicFont" id=2]
size = 121
outline_size = 3
outline_color = Color( 0.247059, 0.901961, 0.215686, 1 )
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 60
outline_size = 2
outline_color = Color( 0.760784, 0.258824, 0.258824, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 30
outline_size = 2
outline_color = Color( 0.760784, 0.258824, 0.258824, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 45
outline_size = 1
outline_color = Color( 0.247059, 0.901961, 0.215686, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
size = 25
outline_size = 2
outline_color = Color( 0.854902, 0.0745098, 0.0745098, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=7]
size = 25
outline_size = 2
outline_color = Color( 0.909804, 0.282353, 0.282353, 1 )
font_data = ExtResource( 2 )

[sub_resource type="ShaderMaterial" id=8]
shader = ExtResource( 14 )
shader_param/_rot = Transform2D( 0.5, -0.86, 0.86, 0.5, 0, 0 )
shader_param/_speed = 0.5
shader_param/_gradation = 0.247

[node name="Hell" type="Node2D"]
script = ExtResource( 1 )
enemies = [ ExtResource( 11 ), ExtResource( 12 ) ]
powerups = [ ExtResource( 9 ) ]

[node name="Player" parent="." instance=ExtResource( 7 )]

[node name="Spawn_Timer" type="Timer" parent="."]
wait_time = 4.5
autostart = true

[node name="Difficulty" type="Timer" parent="."]
wait_time = 1.1
autostart = true
__meta__ = {
"_editor_description_": "pp"
}

[node name="Power_Up_Spawn_Timer" type="Timer" parent="."]
wait_time = 4.5
autostart = true

[node name="UI" type="Node2D" parent="."]
z_index = 15

[node name="Control" type="Control" parent="UI"]
margin_right = 640.0
margin_bottom = 360.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RGB Shift" type="ColorRect" parent="UI/Control"]
material = SubResource( 1 )
margin_right = 640.0
margin_bottom = 360.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="UI/Control"]
margin_left = 61.0
margin_top = -5.0
margin_right = 1341.0
margin_bottom = 140.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = SubResource( 2 )
text = "0"
align = 1
valign = 1
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HighScore" type="Label" parent="UI/Control"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 303.0
margin_top = -29.0
margin_right = 1583.0
margin_bottom = 31.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = SubResource( 3 )
text = "0"
align = 1
valign = 1
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="UI/Control"]
margin_left = 421.732
margin_top = 328.622
margin_right = 550.732
margin_bottom = 359.622
custom_fonts/font = SubResource( 4 )
text = "highscore:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="UI/Control"]
margin_left = 156.0
margin_top = 10.0
margin_right = 306.0
margin_bottom = 70.0
custom_fonts/font = SubResource( 5 )
text = "score:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Kills" type="Label" parent="UI/Control"]
margin_left = 58.8473
margin_top = 331.0
margin_right = 162.847
margin_bottom = 357.0
custom_fonts/font = SubResource( 6 )
text = "kills"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Kills2" type="Label" parent="UI/Control"]
margin_left = 126.555
margin_top = 331.0
margin_right = 230.555
margin_bottom = 357.0
custom_fonts/font = SubResource( 7 )
text = "0"
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect_Background" type="ColorRect" parent="UI/Control"]
modulate = Color( 0.992157, 0.25098, 0.0745098, 1 )
material = SubResource( 8 )
margin_right = 640.0
margin_bottom = 360.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
current = true
smoothing_enabled = true
script = ExtResource( 3 )

[node name="shake_time" type="Timer" parent="Camera2D"]
one_shot = true

[node name="Music" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )
volume_db = 2.5
autoplay = true

[node name="Graphics" parent="." instance=ExtResource( 10 )]

[connection signal="tree_entered" from="." to="." method="_on_Hell_tree_entered"]
[connection signal="timeout" from="Spawn_Timer" to="." method="_on_Spawn_Timer_timeout"]
[connection signal="timeout" from="Difficulty" to="." method="_on_Difficulty_timeout"]
[connection signal="timeout" from="Power_Up_Spawn_Timer" to="." method="_on_Power_Up_Spawn_Timer_timeout"]
[connection signal="timeout" from="Camera2D/shake_time" to="Camera2D" method="_on_shake_time_timeout"]
