[gd_scene load_steps=23 format=2]

[ext_resource path="res://Assets/Squared Display.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scenes/Spray_and_pray_player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Speed_Power_Up.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Enemy_1_Spray_and_pray.tscn" type="PackedScene" id=4]
[ext_resource path="res://Music/Akira Complex - Ether Strike [Arcaea_HYPERSYNTHETIC].mp3" type="AudioStream" id=5]
[ext_resource path="res://Scripts/World.gd" type="Script" id=6]
[ext_resource path="res://Scripts/Score.gd" type="Script" id=7]
[ext_resource path="res://Scripts/HighScore.gd" type="Script" id=9]
[ext_resource path="res://Scenes/Enemy_Spray_and_pray.tscn" type="PackedScene" id=10]
[ext_resource path="res://Scenes/Graphics.tscn" type="PackedScene" id=11]
[ext_resource path="res://Scripts/Kills_Counter.gd" type="Script" id=12]
[ext_resource path="res://Shaders/Aberration.shader" type="Shader" id=13]
[ext_resource path="res://Shaders/Background.shader" type="Shader" id=14]
[ext_resource path="res://Scenes/Wall.tscn" type="PackedScene" id=15]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 13 )
shader_param/_amount = 0.25
shader_param/_centerFade = 0.084
shader_param/_aberrationCenter = Vector2( 0.5, 0.5 )

[sub_resource type="DynamicFont" id=2]
size = 121
outline_size = 3
outline_color = Color( 0.247059, 0.901961, 0.215686, 1 )
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 45
outline_size = 1
outline_color = Color( 0.247059, 0.901961, 0.215686, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 60
outline_size = 2
outline_color = Color( 0.760784, 0.258824, 0.258824, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 30
outline_size = 2
outline_color = Color( 0.760784, 0.258824, 0.258824, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 25
outline_size = 2
outline_color = Color( 0.854902, 0.0745098, 0.0745098, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=7]
size = 25
outline_size = 2
outline_color = Color( 0.909804, 0.282353, 0.282353, 1 )
font_data = ExtResource( 1 )

[sub_resource type="ShaderMaterial" id=8]
shader = ExtResource( 14 )
shader_param/_rot = Transform2D( 0.5, -0.86, 0.86, 0.5, 0, 0 )
shader_param/_speed = 0.5
shader_param/_gradation = 0.247

[node name="Spray_and_pray" type="Node2D"]
script = ExtResource( 6 )
enemies = [ ExtResource( 10 ), ExtResource( 4 ) ]
powerups = [ ExtResource( 3 ) ]

[node name="Player" parent="." instance=ExtResource( 2 )]

[node name="Spawn_Timer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="Difficulty" type="Timer" parent="."]
wait_time = 1.1
autostart = true
__meta__ = {
"_editor_description_": "pp"
}

[node name="Power_Up_Spawn_Timer" type="Timer" parent="."]
wait_time = 4.5
autostart = true

[node name="UI" type="Node2D" parent="."]
z_index = 15

[node name="Control" type="Control" parent="UI"]
margin_right = 640.0
margin_bottom = 360.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RGB Shift" type="ColorRect" parent="UI/Control"]
material = SubResource( 1 )
margin_right = 640.0
margin_bottom = 360.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="UI/Control"]
margin_top = -4.0
margin_right = 1280.0
margin_bottom = 141.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = SubResource( 2 )
text = "0"
align = 1
valign = 1
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="UI/Control"]
margin_left = 156.0
margin_top = 10.0
margin_right = 306.0
margin_bottom = 70.0
custom_fonts/font = SubResource( 3 )
text = "score:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HighScore" type="Label" parent="UI/Control"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 260.0
margin_top = -29.0
margin_right = 1540.0
margin_bottom = 31.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = SubResource( 4 )
text = "0"
align = 1
valign = 1
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="UI/Control"]
margin_left = 421.732
margin_top = 328.622
margin_right = 550.732
margin_bottom = 359.622
custom_fonts/font = SubResource( 5 )
text = "highscore:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Kills" type="Label" parent="UI/Control"]
margin_left = 58.8473
margin_top = 331.0
margin_right = 162.847
margin_bottom = 357.0
custom_fonts/font = SubResource( 6 )
text = "kills"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Kills2" type="Label" parent="UI/Control"]
margin_left = 126.555
margin_top = 331.0
margin_right = 230.555
margin_bottom = 357.0
custom_fonts/font = SubResource( 7 )
text = "0"
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect_Background" type="ColorRect" parent="UI/Control"]
modulate = Color( 0.564706, 1, 0, 1 )
material = SubResource( 8 )
margin_right = 640.0
margin_bottom = 360.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Music" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
volume_db = 2.5
autoplay = true

[node name="Graphics" parent="." instance=ExtResource( 11 )]

[node name="Walls" parent="." instance=ExtResource( 15 )]
position = Vector2( 86.205, 25 )
rotation = 1.5708

[node name="Wall4" parent="Walls" instance=ExtResource( 15 )]
position = Vector2( -4.57764e-05, -106.405 )
scale = Vector2( 1, 1 )

[node name="Wall7" parent="Walls" instance=ExtResource( 15 )]
position = Vector2( 297.158, -123.612 )
rotation = -1.5708
scale = Vector2( 0.102684, 9.73866 )

[node name="Wall8" parent="Walls" instance=ExtResource( 15 )]
position = Vector2( 297.158, 12.8947 )
rotation = -1.5708
scale = Vector2( 0.102684, 9.73866 )

[node name="Wall5" parent="Walls" instance=ExtResource( 15 )]
position = Vector2( 623.362, -107.094 )
scale = Vector2( 1, 1 )

[node name="Wall6" parent="Walls" instance=ExtResource( 15 )]
position = Vector2( 614.425, 0.276464 )
scale = Vector2( 1, 1 )

[connection signal="tree_entered" from="." to="." method="_on_Spray_and_pray_tree_entered"]
[connection signal="timeout" from="Spawn_Timer" to="." method="_on_Spawn_Timer_timeout"]
[connection signal="timeout" from="Difficulty" to="." method="_on_Difficulty_timeout"]
[connection signal="timeout" from="Power_Up_Spawn_Timer" to="." method="_on_Power_Up_Spawn_Timer_timeout"]
